<resources>
    <string name="app_name">bymybeer</string>

    <string name="rub">руб.</string>
    <string name="usd">$</string>
    <string name="eur">€</string>

    <string name="main_image_desc">Photo</string>
    <string name="from_camera_desc">Take new photo</string>
    <string name="from_gallery_desc">Select from gallery</string>

    <string name="general_info">Общая информация</string>
    <string name="general_info_desc">General info</string>

    <string name="name_hint">Название</string>
    <string name="name_desc">Beer name</string>

    <string name="type_hint">Тип</string>
    <string name="type_desc">Beer type</string>

    <string name="alcohol_percent_hint">алк.%</string>
    <string name="price_hint">Стоимость</string>
    <string name="volume_hint">Объем</string>
    <string name="note_content_hint">Добавьте описание…</string>

    <string name="rating">Рейтинг</string>
    <string name="rating_desc">Rating</string>

    <string name="cost">Цена</string>
    <string name="cost_desc">Cost</string>

    <string name="bitterness">Горечь</string>
    <string name="bitterness_desc">Bitterness</string>

    <string name="taste">Вкус</string>
    <string name="taste_desc">Taste</string>

    <string name="saturation">Насыщенность</string>
    <string name="saturation_desc">Saturation</string>

    <string name="alcohol">Крепость</string>
    <string name="alcohol_desc">Alcohol</string>

    <string name="note">Примечание</string>
    <string name="note_desc">Note</string>

    <string name="small_desc">%1$s, %2$.1f%% алк.</string>
    <string name="price_and_volume">%1$.0f %2$s за %3$.1f л.</string>

</resources>
