<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".activity.DisplayActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="320dp"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.design.widget.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:titleEnabled="false"
            app:layout_scrollFlags="scroll|exitUntilCollapsed|snap">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_collapseMode="parallax">

                <ImageView
                    android:id="@+id/mainImage"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/main_image_desc"
                    android:scaleType="centerCrop"
                    app:srcCompat="@drawable/no_image" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="220dp"
                    android:background="@drawable/scrim"
                    android:layout_alignParentBottom="true"/>

                <TextView
                    android:id="@+id/name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_above="@+id/main_rating"
                    android:layout_alignParentStart="true"
                    android:layout_marginStart="16dp"
                    android:fontFamily="@font/roboto_bold"
                    android:textAlignment="viewEnd"
                    android:textAllCaps="true"
                    android:textColor="@color/white"
                    android:textSize="24sp" />

                <RatingBar
                    android:id="@+id/main_rating"
                    style="@style/MyRatingBarBig"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_above="@+id/small_desc"
                    android:layout_alignParentStart="true"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginBottom="4dp"
                    android:isIndicator="true" />

                <TextView
                    android:id="@+id/rating_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@+id/main_rating"
                    android:layout_above="@+id/small_desc"
                    android:layout_marginStart="5dp"
                    android:layout_marginBottom="2dp"
                    android:textSize="20sp"
                    android:fontFamily="@font/roboto_medium"
                    android:textColor="@color/colorAccent" />

                <TextView
                    android:id="@+id/small_desc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_above="@+id/price_and_volume"
                    android:layout_alignParentStart="true"
                    android:layout_marginStart="16dp"
                    android:fontFamily="@font/roboto_light"
                    android:textColor="@color/white"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/price_and_volume"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentStart="true"
                    android:layout_marginBottom="38dp"
                    android:layout_marginStart="16dp"
                    android:fontFamily="@font/roboto_light"
                    android:textColor="@color/white"
                    android:textSize="16sp" />

            </RelativeLayout>

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>

        </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp">

            <TextView
                android:id="@+id/rating"
                style="@style/SubtitleText"
                android:contentDescription="@string/rating_desc"
                android:text="@string/rating" />

            <View
                android:id="@+id/delimiter1"
                style="@style/MainDelimiter"
                android:layout_below="@+id/rating" />

            <TextView
                android:id="@+id/cost"
                style="@style/RatingLabel"
                android:layout_below="@+id/delimiter1"
                android:contentDescription="@string/cost_desc"
                android:text="@string/cost" />

            <RatingBar
                android:id="@+id/cost_rating"
                style="@style/MyRatingBarBig"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignBottom="@+id/cost"
                android:isIndicator="true" />

            <TextView
                android:id="@+id/bitterness"
                style="@style/RatingLabel"
                android:layout_below="@+id/cost"
                android:contentDescription="@string/bitterness_desc"
                android:text="@string/bitterness" />

            <RatingBar
                android:id="@+id/bitterness_rating"
                style="@style/MyRatingBarBig"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignBottom="@+id/bitterness"
                android:isIndicator="true" />

            <TextView
                android:id="@+id/taste"
                style="@style/RatingLabel"
                android:layout_below="@+id/bitterness"
                android:contentDescription="@string/taste_desc"
                android:text="@string/taste" />

            <RatingBar
                android:id="@+id/taste_rating"
                style="@style/MyRatingBarBig"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignBottom="@+id/taste"
                android:isIndicator="true" />

            <TextView
                android:id="@+id/saturation"
                style="@style/RatingLabel"
                android:layout_below="@+id/taste"
                android:contentDescription="@string/saturation_desc"
                android:text="@string/saturation" />

            <RatingBar
                android:id="@+id/saturation_rating"
                style="@style/MyRatingBarBig"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignBottom="@+id/saturation"
                android:isIndicator="true" />

            <TextView
                android:id="@+id/alcohol"
                style="@style/RatingLabel"
                android:layout_below="@+id/saturation"
                android:contentDescription="@string/alcohol_desc"
                android:text="@string/alcohol" />

            <RatingBar
                android:id="@+id/alcohol_rating"
                style="@style/MyRatingBarBig"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignBottom="@+id/alcohol"
                android:isIndicator="true" />

            <TextView
                android:id="@+id/note"
                style="@style/SubtitleText"
                android:layout_below="@+id/alcohol"
                android:layout_marginTop="16dp"
                android:contentDescription="@string/note_desc"
                android:text="@string/note" />

            <View
                android:id="@+id/delimiter2"
                style="@style/MainDelimiter"
                android:layout_below="@+id/note" />

            <TextView
                android:id="@+id/note_content"
                style="@style/SubtitleText"
                android:layout_below="@+id/delimiter2"
                android:textSize="14sp"
                android:lineSpacingMultiplier="1.5"/>

        </RelativeLayout>

    </android.support.v4.widget.NestedScrollView>

</android.support.design.widget.CoordinatorLayout>